<resources>
    <string name="app_name"><b>RatingApp</b></string>
    <string name="LabelCourseName">Kurs: %s</string>
    <string name="LabelVorname">Vorname: %s</string>
    <string name="LabelNachname">Nachname: %s</string>
    <string name="LabelDate">Datum: %s</string>
    <string name="LabelCriterion">Kriterium: %s</string>
    <string name="LabelRating">Bewertung: %c</string>
    <string name="LabelEndRating">Gesamtbewertung: %c</string>
    <string name="rating_char"><b>  %c  </b></string>
    <string name="settings"><b>Einstellungen für</b></string>
    <string name="rating_pcm">+ o -</string>
    <string name="rating_abcd">ABCD</string>
    <string name="rating_1till6">Noten von 1 bis 6</string>
    <string name="arith_mean">Arithmetischen Mittelwert</string>
    <string name="median">Median</string>
    <string name="ratings"><b>Bewertungen</b></string>
    <string name="endratings"><b>Gesamtbewertungen</b></string>
    <string name="criterion_char">Kriterium  %d: </string>
    <string name="course">Kurs</string>
    <string name="courselist"><b>Kurse</b></string>
    <string name="insert_message"> Enter Message </string>
    <string name="save_button"> Speichern </string>
    <string name="change_date_button"> Datum ändern </string>
    <string name="load_button"> Lade zuletzt gespeicherte Bewertungen </string>
    <string name="send_button"> Datei </string>
    <string name="file_button"> Datei </string>
    <string name="about_button"> Über </string>
    <string name="delete_button"> Lösche Kurs </string>
    <string name="ok">Ja</string>
    <string name="cancel">Abbrechen</string>
    <string name="display_ratings_button"> Zeige alle Bewertungen </string>
    <string name="appMessage">com.ratingapp.COURSENAMEMESSAGE</string>
    <string name="senderMessage">com.ratingapp.SENDERMESSAGE</string>
</resources>