<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="5dp"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_name"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:textSize="15sp"
            android:text="@string/about_button"
            android:onClick="about"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:textSize="15sp"
            android:text="@string/file_button"
            android:onClick="getFile"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:textSize="15sp"
            android:text="@string/delete_button"
            android:onClick="deleteCourse"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:textSize="15sp"
        android:text="@string/display_ratings_button"
        android:onClick="displayRatings"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:onClick="displayRatingStatistics"
        android:textSize="15sp"
        android:text="Zeige Gesamtbewertungen" />

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_height="@dimen/title_height"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/courselist"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_id"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        />

</LinearLayout>